# symbols

./: 0.bootstrap.js  Cargo.toml  index.html
.github/workflows/: webpack.yml
src/: lib.rs  main.rs  symbol.rs  symbol_parser.rs  symbols.pest  us_stocks.txt
symbols_ruby/: Cargo.toml  Gemfile  README.md  Rakefile  symbols_ruby.gemspec
symbols_ruby/ext/symbols_ruby/: Cargo.toml  extconf.rb
symbols_ruby/ext/symbols_ruby/src/: lib.rs
symbols_ruby/lib/: symbols_ruby.rb
symbols_ruby/lib/symbols_ruby/: version.rb
symbols_ruby/sig/: symbols_ruby.rbs
symbols_ruby/spec/: spec_helper.rb  symbols_ruby_spec.rb
www/: index.html  index.js  package-lock.json  package.json
