[package]
name = "symbols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "symbols"
path = "src/lib.rs"

[[bin]]
name = "symbols"
path = "src/main.rs"

[dependencies]
once_cell = "1.19.0"
pest = "2.7.10"
pest_derive = "2.7.10"
regex = "1.10.4"
wasm-bindgen = "0.2.92"
